k8s/apps/django-hello/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-hello
  namespace: django
spec:
  type: ClusterIP
  selector:
    app: django-hello
  ports:
  - port: 80
    targetPort: 5678
